pthread is a thing

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,6 @@
 SRC_FILES := $(wildcard *.c)
 OBJ_FILES := $(patsubst %.c, %.o,$(SRC_FILES))
-
+LDFLAGS := -lpthread
 main.exe: $(OBJ_FILES)
 	gcc $(LDFLAGS) -o $@ $^
 
