Added mraa LED code

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,8 @@
 SRC_FILES := $(wildcard *.c)
 OBJ_FILES := $(patsubst %.c, %.o,$(SRC_FILES))
 LDFLAGS := -lpthread
-main.exe: $(OBJ_FILES)
+
+CluelessCloset.exe: $(OBJ_FILES)
 	gcc $(LDFLAGS) -o $@ $^
 
 %.o: %.c
