more growing pains

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,8 +2,8 @@ SRC_FILES := $(wildcard *.cpp)
 OBJ_FILES := $(patsubst %.cpp, %.o,$(SRC_FILES))
 LDFLAGS := -lpthread -lmraa
 
-CluelessCloset.exe: $(OBJ_FILES)
-	gpp $(LDFLAGS) -o $@ $^
+CluelessCloset: $(OBJ_FILES)
+	g++ $(LDFLAGS) -o $@ $^
 
-%.o: %.cpp
-	gpp $(CFLAGS) -c -o $@ $<
+%.o: %.cpp %.hpp
+	g++ $(CPPFLAGS) -c $@ $<
