last growing pain for now i hope

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,9 +1,10 @@
 SRC_FILES := $(wildcard *.cpp)
 OBJ_FILES := $(patsubst %.cpp, %.o,$(SRC_FILES))
 LDFLAGS := -lpthread -lmraa
+CPPFLAGS += -g 
 
 CluelessCloset: $(OBJ_FILES)
 	g++ $(LDFLAGS) -o $@ $^
 
 %.o: %.cpp %.hpp
-	g++ $(CPPFLAGS) -c $@ $<
+	g++ $(CPPFLAGS) -c $< -o $@ 
